rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h235_1998_H235-SECURITY-MESSAGES.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h235_1998_H235-SECURITY-MESSAGES.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 116, column 2]
     │
     │ 
 116 │  CryptoToken ::= CHOICE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 117 │    cryptoEncryptedToken
 118 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 119 │                                                                 OBJECT
 120 │                                                                   IDENTIFIER,
 121 │                                                               token
 122 │                                                                 ENCRYPTED
 123 │                                                                   {EncodedGeneralToken}
 124 │    },
 125 │    cryptoSignedToken
 126 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 127 │                                                                 OBJECT
 128 │                                                                   IDENTIFIER,
 129 │                                                               token
 130 │                                                                 SIGNED
 131 │                                                                   {EncodedGeneralToken}
 132 │    },
 133 │    cryptoHashedToken
 134 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 135 │                                                                 OBJECT
 136 │                                                                   IDENTIFIER,
 137 │                                                               hashedVals
 138 │                                                                 ClearToken,
 139 │                                                               token
 140 │                                                                 HASHED
 141 │                                                                   {EncodedGeneralToken}
 142 │    },
 143 │    cryptoPwdEncr         ENCRYPTED{EncodedPwdCertToken},
 144 │    ...
 145 │  }
 147 │  -- These allow the passing of session keys within the H.245 OLC structure.
 148 │  -- They are encoded as standalone ASN.1 and based as an OCTET STRING within H.245
     │
─────╯
